--- a/.github/workflows/Generate Datas.yml
+++ b/.github/workflows/Generate Datas.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: {{RanaEssam03}}
+          github_user_name: RanaEssam03
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
